SCB_Bootloader/AccelerometerTest.cydsn/REBUILD.log
--------------- Rebuild Started: 04/21/2020 13:49:18 Project: AccelerometerTest, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\adxl345_driver.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\goniometer_driver.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\moving_average_filter.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\acceleration_vector.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cybootloader.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Bootloadable.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Cm0Start.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\CyLFClk.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_I2C_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_I2C.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_I2C_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_I2C_MASTER.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Screen.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Screen_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_SCBCLK.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_sda.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_sda_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_scl.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_scl_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\I2C_SCB_IRQ.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Screen_LCDPort.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\Screen_LCDPort_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_SPI_UART.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_SPI_UART_INT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_UART.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_UART_BOOT.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_SCBCLK.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_tx.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_tx_PM.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\PuTTY_SCB_IRQ.o"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AccelerometerTest.hex"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AccelerometerTest.elf"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AccelerometerTest.map"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\AccelerometerTest.cyacd"
Deleting file ".\AccelerometerTest.cycdx"
Deleting file ".\AccelerometerTest.svd"
Deleting file ".\AccelerometerTest.rpt"
Deleting file ".\AccelerometerTest_timing.html"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM0\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\austi\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\austi\Desktop\SeatPM\SCB_Bootloader\AccelerometerTest.cydsn\AccelerometerTest.cyprj -d CY8C4245AXI-483 -s C:\Users\austi\Desktop\SeatPM\SCB_Bootloader\AccelerometerTest.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0015: information: One or more rows of flash have been configured to be protected; however, debugging has been enabled in the System DWR Editor. This means that while write restrictions are honored flash rows can still be read via SWD or JTAG. To prevent any ability to read the flash rows, disable debugging in the System DWR Editor.
 * C:\Users\austi\Desktop\SeatPM\SCB_Bootloader\AccelerometerTest.cydsn\AccelerometerTest.cydwr (Chip Protection)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Os -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
In file included from main.c:15:0:
main.c: In function 'main':
austin_debug.h:30:34: error: expected expression before ')' token
     #define DEBUG_PRINT(string) ()
                                  ^
main.c:46:5: note: in expansion of macro 'DEBUG_PRINT'
     DEBUG_PRINT("x,y,z\r\n");
     ^
austin_debug.h:30:34: error: expected expression before ')' token
     #define DEBUG_PRINT(string) ()
                                  ^
main.c:57:9: note: in expansion of macro 'DEBUG_PRINT'
         DEBUG_PRINT(DebugString);
         ^
austin_debug.h:36:32: error: expected expression before ')' token
     #define CSV_PRINT(string) ()
                                ^
main.c:59:9: note: in expansion of macro 'CSV_PRINT'
         CSV_PRINT(CSV_String)
         ^
austin_debug.h:30:34: error: expected expression before ')' token
     #define DEBUG_PRINT(string) ()
                                  ^
main.c:65:9: note: in expansion of macro 'DEBUG_PRINT'
         DEBUG_PRINT(DebugString);
         ^
austin_debug.h:30:34: error: expected expression before ')' token
     #define DEBUG_PRINT(string) ()
                                  ^
main.c:72:9: note: in expansion of macro 'DEBUG_PRINT'
         DEBUG_PRINT(DebugString);
         ^
austin_debug.h:30:34: error: expected expression before ')' token
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
     #define DEBUG_PRINT(string) ()
                                  ^
main.c:78:9: note: in expansion of macro 'DEBUG_PRINT'
         DEBUG_PRINT(DebugString);
         ^
austin_debug.h:30:34: error: expected expression before ')' token
     #define DEBUG_PRINT(string) ()
                                  ^
main.c:84:9: note: in expansion of macro 'DEBUG_PRINT'
         DEBUG_PRINT(DebugString);
         ^
austin_debug.h:30:34: error: expected expression before ')' token
     #define DEBUG_PRINT(string) ()
                                  ^
main.c:91:9: note: in expansion of macro 'DEBUG_PRINT'
         DEBUG_PRINT(DebugString);
         ^
austin_debug.h:30:34: error: expected expression before ')' token
     #define DEBUG_PRINT(string) ()
                                  ^
main.c:94:9: note: in expansion of macro 'DEBUG_PRINT'
         DEBUG_PRINT("\r\n");
         ^
--------------- Rebuild Failed: 04/21/2020 13:49:26 ---------------
